--- a/src/test/index.html
+++ b/src/test/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
     <script src="lib/jasmine-1.3.1/jasmine.js"></script>
     <script src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+    <script src="/testem.js"></script>
 
     <!-- code under test -->
     <script src="../js/util/random.js"></script>
